tuning opacity + margin in one section

--- a/css/styles.css
+++ b/css/styles.css
@@ -11331,7 +11331,7 @@ html {
 .navbar-custom {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: rgba(2, 48, 71, 0.7);
+  background-color: rgba(2, 48, 71,0.9);
 }
 .navbar-custom .navbar-brand {
   text-transform: uppercase;
